--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
 
 /* Style the header */
 header {
-  background-color: #56445D;
+  background-color: #e3120b;
   padding: 30px;
   text-align: center;
   font-size: 35px;
