--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ header {
 }
 
 header a, header a:visited, nav a, nav a:visited {
-  color: #8FBC94
+  color: #ffffff
 }
 /* Container for flexboxes */
 section {
