--- a/templates/card-horizontal.html
+++ b/templates/card-horizontal.html
@@ -1,13 +1,15 @@
 <div class="card mb-3" style="max-width: 540px;">
     <div class="row g-0">
 	<div class="col-md-4">
-	    <img src="..." class="img-fluid rounded-start" alt="...">
+	    <img src="/thumbnail/${this.thumbnail}" class="img-fluid rounded-start" alt="${this.title}" />
 	</div>
 	<div class="col-md-8">
 	    <div class="card-body">
-		<h5 class="card-title">Card title</h5>
-		<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-		<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+		<h5 class="card-title">${this.title || ""}</h5>
+		<p class="card-text">${this.description || ""}</p>
+		<!-- p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p -->
+		<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#pdfModal" data-bs-whatever="${this.pdf}">View PDF</button>
+
 	    </div>
 	</div>
     </div>
