images and text

--- a/templates/card-horizontal.html
+++ b/templates/card-horizontal.html
@@ -8,7 +8,7 @@
 		<h5 class="card-title">${this.title || ""}</h5>
 		<p class="card-text">${this.description || ""}</p>
 		<!-- p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p -->
-		<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#pdfModal" data-bs-whatever="${this.pdf}">View PDF</button>
+		<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#pdfModal" data-bs-whatever="${this.pdf}">Read more</button>
 
 	    </div>
 	</div>
