--- a/templates/card-horizontal.html
+++ b/templates/card-horizontal.html
@@ -1,7 +1,7 @@
 <div class="card mb-3" style="max-width: 540px;">
     <div class="row g-0">
 	<div class="col-md-4">
-	    <img src="/thumbnail/${this.thumbnail}" class="img-fluid rounded-start" alt="${this.title}" />
+	    <img src="thumbnail/${this.thumbnail}" class="img-fluid rounded-start" alt="${this.title}" />
 	</div>
 	<div class="col-md-8">
 	    <div class="card-body">
