--- a/templates/card-horizontal.html
+++ b/templates/card-horizontal.html
@@ -1,15 +1,16 @@
-<div class="card mb-3" style="max-width: 540px;">
-    <div class="row g-0">
-	<div class="col-md-4">
-	    <img src="thumbnail/${this.thumbnail}" class="img-fluid rounded-start" alt="${this.title}" />
-	</div>
-	<div class="col-md-8">
-	    <div class="card-body">
-		<h5 class="card-title">${this.title || ""}</h5>
-		<p class="card-text">${this.description || ""}</p>
-		<!-- p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p -->
-		<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#pdfModal" data-bs-whatever="${this.pdf}">Read more</button>
-
+<div class="col-sm-6">
+    <div class="card mb-3">
+	<div class="row g-0">
+	    <div class="col-md-4">
+		<img src="thumbnail/${this.thumbnail}" class="img-fluid rounded-start" alt="${this.title}" />
+	    </div>
+	    <div class="col-md-8">
+		<div class="card-body">
+		    <h5 class="card-title">${this.title || ""}</h5>
+		    <p class="card-text">${this.description || ""}</p>
+		    <!-- p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p -->
+		    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#pdfModal" data-bs-whatever="${this.pdf}">Read more</button>
+		</div>
 	    </div>
 	</div>
     </div>
