--- a/templates/card-vertical.html
+++ b/templates/card-vertical.html
@@ -1,6 +1,8 @@
 <div class="card" style="width: 18rem;">
-    <img src="..." class="card-img-top" alt="...">
+    <img src="thumbnail/${this.thumbnail}" class="card-img-top" alt="${this.title}">
     <div class="card-body">
-	<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+	<h5 class="card-title">${this.title || ""}</h5>
+	<p class="card-text">${this.description || ""}</p>
+	<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#pdfModal" data-bs-whatever="${this.pdf}">Read more</button>
     </div>
 </div>
