filter by topics now working

--- a/templates/card-horizontal.html
+++ b/templates/card-horizontal.html
@@ -1,4 +1,4 @@
-<div class="col-sm-6">
+<div class="col-sm-6 article" data-topics="${this.topics}">
     <div class="card mb-3">
 	<div class="row g-0">
 	    <div class="col-md-4">
