--- a/templates/card-vertical.html
+++ b/templates/card-vertical.html
@@ -1,5 +1,5 @@
-<div class="card" style="width: 18rem;">
-    <img src="thumbnail/${this.thumbnail}" class="card-img-top" alt="${this.title}">
+<div class="card article" style="width: 18rem;" data-topics="${this.topics}">
+    <img src="thumbnail/${this.thumbnail}" class="card-img-top" alt="${this.title}" />
     <div class="card-body">
 	<h5 class="card-title">${this.title || ""}</h5>
 	<p class="card-text">${this.description || ""}</p>
