--- a/templates/card-vertical.html
+++ b/templates/card-vertical.html
@@ -3,6 +3,6 @@
     <div class="card-body">
 	<h5 class="card-title">${this.title || ""}</h5>
 	<p class="card-text">${this.description || ""}</p>
-	<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#pdfModal" data-bs-whatever="${this.pdf}">Read more</button>
+	<button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#pdfModal" data-bs-whatever="${this.pdf}">Read more</button>
     </div>
 </div>
